# vala.win32

./: .gdb_history  .gitignore  LICENSE  Makefile  README.md  meson.build  meson.options  test-inline  win32-system-stub.pc.in  win32-ui-windowsandmessaging.pc.in  win32-ui.pc
.cursor/rules/: agent-windows-test.mdc  avoid-powershell.mdc
.github/workflows/: deploy-docs.yml
cross/: mingw-w64.ini
docs/: WINUI3-CHANGELOG.md  WINUI3-SITREP.md  webview2-binding-architecture.md  webview2-capture-investigation.md  win32-rc.md  windows-build.md  windows-winui3-method.md  windows-winui3-restore-layers.md  windows-winui3-status.md  windows-winui3.md
docs/coverage/: 6a-coverage-matrix.md  6b-filter-trials.md  6e-gap-report.md
docs/plans/: 01 - project overview.md  01-DONE - project overview.md  02 - phase 0 foundation.md  02-DONE - phase 0 foundation.md  03 - phase 1 metadata and generator.md  03-DONE - phase 1 metadata and generator.md  04 - phase 2 ergonomic vapi.md  04-DONE - phase 2 ergonomic vapi.md  05 - phase 3 common controls.md  05-DONE - phase 3 common controls.md  06 - phase 4 dialogs and resources.md  06-DONE - phase 4 dialogs and resources.md  07 - phase 5 polish and ci.md  07 - phase 5 widget emit.md  07-DONE - phase 5 widget emit.md  08 - phase 6 full api coverage.md  08 - phase 6 polish and ci.md  09 - phase 7 polish and ci.md  1. project overview.md  10. phase 8 polish and ci.md  11. phase 9 winui3 winmd hand binding.md  2. DONE - phase 0 foundation.md  3. DONE - phase 1 metadata and generator.md  4. DONE - phase 2 ergonomic vapi.md  5. DONE - phase 3 common controls.md  6. DONE - phase 4 dialogs and resources.md  7. DONE - phase 5 widget emit.md  8. phase 6 full api coverage.md  9. phase 7 webview2 research and integration.md
examples/: button-demo.vala  common-dialog-demo.vala  dialog-demo.vala  ergonomic-button-demo.vala  ergonomic-common-dialog-demo.vala  ergonomic-dialog-demo.vala  ergonomic-error-demo.vala  ergonomic-menu-demo.vala  ergonomic-widgets-demo.manifest  ergonomic-widgets-demo.rc  ergonomic-widgets-demo.vala  error-demo.vala  gtk-webview2-hello.vala  hello-window.vala  menu-demo.vala  webview2-demo.vala  webview2-ergo-demo.vala  webview2-host-demo.vala  widgets-demo.manifest  widgets-demo.rc  widgets-demo.vala
examples/native/: button-demo.vala  common-dialog-demo.vala  dialog-demo.vala  error-demo.vala  hello-window.vala  menu-demo.vala  webview2-host-demo.vala  webview2-host-native.vala  winui3-hello.vala  winui3-widgets.vala
examples/resources/: minimal.rc
metadata/: webview2-api.files  webview2-host-overrides.json  webview2-sdk-ref.txt  widget-conventions.json  win32json-api.files  win32json-ref.txt  winui3-api.files  winui3-sdk-ref.txt
metadata/filters/: gui.filter  webview2.filter  winui3.filter
metadata/webview2/: README.md
metadata/webview2-stub/: EventToken.h
metadata/webview2/api/: WebView2.json
metadata/winui3/: README.md
metadata/winui3-sparse/: AppxManifest.xml  vala.win32.winui3.manifest
scripts/: agent-remote-build.sh  agent-remote-winui3-probe.ps1  agent-remote-winui3-probe.sh  agent-remote-winui3-reference-build.ps1  agent-remote-winui3-reference-build.sh  agent-remote-winui3-reference-probe.ps1  agent-remote-winui3-reference-stage.ps1  agent-remote-winui3-run.ps1  agent-remote-winui3-runtime-pin.ps1  agent-remote-winui3-sandbox-run.ps1  agent-remote-winui3-sandbox.sh  agent-remote-winui3-setup.ps1  build-gtk-webview2-hello.sh  build-valadoc.sh  build-win.sh  check-regen.sh  check-winui3-runtime.ps1  compile-check.sh  diagnose-winui3.ps1  embed-winui3-manifest.sh  fix-vala-paren-spacing.py  install-winui3-msix.sh  install-winui3-runtime.ps1  install-winui3-runtime.sh  regen-webview2-host-header.sh  regen-webview2-json.sh  regen-webview2-vapi.sh  register-winui3-sparse.sh  run-gtk-webview2-hello-smoke.sh  run-wine.sh  setup-mingw-libs.sh  setup-msys2-toolchain.sh  sign-winui3-sparse.sh  validate-winui3-build-win.sh  vendor-webview2-sdk.sh  vendor-win32json.sh  vendor-winui3-runtime.sh  vendor-winui3-sdk.sh  vendor-winui3-sparse.sh  win32-gui-prologue.h  (+1 more)
src/: webview2-capture-spike.c  webview2-capture-spike.h  webview2-com-glue.c  webview2-com-glue.h  webview2-host.vala  webview2-loader.c  webview2-loader.h  webview2-plumbing.c  webview2-plumbing.h  win32-ergo-webview2.vala  win32-ui-webview2-com-glue.c  win32-ui-webview2-com-glue.h  win32-ui-webview2-host.h  win32-ui-webview2-host.vala  win32-ui-webview2-loader.c  win32-ui-webview2-loader.h  win32-ui-webview2-sdk.h  win32-ui-winrt-base.h  win32-ui-winui3-host.cpp  win32-ui-winui3-host.h
src/Generate/: ApiFileList.vala  ApplicationInterface.vala  CoverageReport.vala  ErgoWebView2Emitter.vala  ErrorEmitter.vala  NameMapper.vala  SymbolFilter.vala  VapiEmitter.vala  WebView2ComSyncEmitter.vala  WebView2EventEmitter.vala  WebView2GlueEmitter.vala  WebView2MethodCatalog.vala  WideStringsEmitter.vala  WidgetCodegen.vala  WidgetEmitter.vala
src/Generate/Parser/: ApiFile.vala  ApiFileEntry.vala  Base.vala  Constant.vala  EnumValue.vala  ErgoNativeMapEntry.vala  Field.vala  Function.vala  MetadataType.vala  Parameter.vala  SyncComSpec.vala  TypeRef.vala  WidgetBehaviorProfileSpec.vala  WidgetConventionsFile.vala
src/Generate/templates/: win32-ergo-webview2-shell.vala  win32-widgets.vala  (+1 more)
tools/: generate-binding.vala  generate-webview2-json.vala
vapi/: webview2.vapi  win32-foundation-stub.vapi  win32-graphics-gdi.vapi  win32-system-stub.vapi  win32-ui-accessibility.vapi  win32-ui-controls-dialogs.vapi  win32-ui-controls-richedit.vapi  win32-ui-controls.vapi  win32-ui-hidpi.vapi  win32-ui-input-keyboardandmouse.vapi  win32-ui-input.vapi  win32-ui-shell-common.vapi  win32-ui-shell-propertiessystem.vapi  win32-ui-shell.vapi  win32-ui-webview2.vapi  win32-ui-windowsandmessaging.vapi  win32-ui.vapi  win32-webview2.vapi
vapi/archive/: README.md  win32-ui-native.vapi
winui3/: Makefile  README.txt  build-msvc.ps1  build.sh  main.cpp
winui3/patches/: cpp-winui-unpackaged-Directory.Build.props  main.cpp  winui3-without-xaml-packages.config  winui3-without-xaml.vcxproj
