option(
  'build_posix_examples',
  type: 'boolean',
  value: true,
  description: 'Build Track A native examples (native-hello-window, native-button-demo, …)',
)
option(
  'build_ergonomic_examples',
  type: 'boolean',
  value: true,
  description: 'Build default examples/ demos (hello-window, button-demo, …; needs mingw-libs)',
)
option(
  'regen_on_build',
  type: 'boolean',
  value: true,
  description: 'Run generate-binding before compile (slow on Samba; use false for build-win)',
)
