option(
  'build_posix_examples',
  type: 'boolean',
  value: true,
  description: 'Build Track A native examples (hello-window-native, button-demo-native, …)',
)
option(
  'build_ergonomic_examples',
  type: 'boolean',
  value: true,
  description: 'Build default examples/ demos (hello-window, button-demo, …; needs mingw-libs)',
)
option(
  'regen_on_build',
  type: 'boolean',
  value: true,
  description: 'Run generate-binding before compile (slow on Samba; use false for build-win)',
)
option(
  'build_winui3',
  type: 'boolean',
  value: false,
  description: 'Build WinUI3 demos (experimental; off by default — see README.md)',
)
